experimenting with SVGs and trying to center them within the practice DIV. Saved progress till here. To fix SVG elements rearranging when going off screen on the right

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,14 @@ body{
     background-image: linear-gradient(#070b34,#855988);
     color: white;
     margin: 0;
-    overflow-x: clip;
+    overflow-x: hidden;
 }
+
 /* div{
     
-    padding: 2rem;
+    border: 1px;
+    border-style: solid;
+    border-color: white;
 
 } */
 
@@ -19,24 +22,30 @@ body{
 /* elements styling */
 
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48;
-  color: white;
-  padding: 2rem 1rem;
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48;
+    color: white;
+    padding: 2rem 1rem;
+}
+
+/* Body styling */
+
+.practice-div{
+    
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+
 }
 
 .title-header{
 
-    /* background-color: #6D5D6E ;
-    background-color: #4F4557 ; */
-    /* display: inline; */
-    /* position: relative; */
     width: 100vw;
     height: 100vh;
-    /*padding: 0;*/
+
 }
 
 .title-header__title{
@@ -59,15 +68,40 @@ body{
 
 /* positioning */
 
-.centerDiv{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.center{
+    position: relative;
+/*     top: 50%; */
+/*     right: 50%; */
+/*     transform: translate(-50%,-50%); */
 }
 
 /* effects */
 
+::-webkit-scrollbar {
+
+    display: none;
+}
+
 .glow{
+
     text-shadow : 1px 1px 3px white, -1px -1px 3px white;
+}
+
+.name-svg {
+
+    height: 30vw;
+    width: 16vw;
+    border: 3px solid white;
+
+}
+.svg-group{
+
+    display: inline-block;
+    height: 30vw;
+    position: absolute;
+    /* transform: translate(-50%,-50%); */
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+
 }
